<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">蜂贝贝商城</string>
    <string name="home">首页</string>
    <string name="cart">购物车</string>
    <string name="category">分类</string>
    <string name="ucenter">会员中心</string>
    <string name="scan">扫一扫</string>
    <string name="message">信息</string>
    <string name="search_goods">搜索商品</string>
    <string name="goods_category">商品分类</string>
    <string name="my_ucenter">我的蜂贝贝</string>
    <string name="my_order">我的订单</string>
    <string name="my_collect">我的收藏</string>
    <string name="guess_like_love">猜你喜欢</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="account_edit_placeholder">用户名/手机号/邮箱</string>
    <string name="password">密码</string>
    <string name="password_edit_placeholder">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="free_reg">免费注册</string>
    <string name="wx_login">微信登陆</string>
    <string name="qq_login">QQ登陆</string>
    <string name="follow_goods">关注的商品</string>
    <string name="follow_store">关注的店铺</string>
    <string name="browsing_history">浏览记录</string>
    <string name="see_all_order">查看全部订单</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_ship">待发货</string>
    <string name="wait_receipt">待收货</string>
    <string name="wait_comment">待评价</string>
    <string name="my_wallet">我的钱包</string>
    <string name="account_balance">账户余额</string>
    <string name="point">积分</string>
    <string name="voucher">代金券</string>
    <string name="card_top_up">充值卡</string>
    <string name="all_order">全部订单</string>
    <string name="success">成功</string>


    <string name="order_sn_colon">订单号：</string>
    <string name="delete_order">删除订单</string>
    <string name="cancel_order">取消订单</string>
    <string name="go_evaluate">去评价</string>
    <string name="evaluate_bask_order">评价晒单</string>
    <string name="again_buy">再次购买</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="order_pay">订单支付</string>
    <string name="money_unit">￥</string>
    <string name="include_ship_fee_format">(含运费¥%s)</string>
    <string name="order_detail">订单详情</string>
    <string name="thank_shopping_welcome_next">感谢您在蜂贝贝购物，欢迎您下次光临</string>
    <string name="online_service">在线客服</string>
    <string name="payment_type">支付方式</string>
    <string name="online_pay">在线支付</string>
    <string name="deliver_type">配送方式</string>
    <string name="invoice_info">发票信息</string>
    <string name="invoice_title_colon">发票抬头：</string>
    <string name="invoice_content_colon">发票内容：</string>
    <string name="real_payment_fee_colon">实付款：</string>
    <string name="goods_amount">商品总额</string>
    <string name="ship_fee">运费</string>
    <string name="add_order_date_colon">下单时间：</string>
    <string name="logistics_info">物流信息</string>

    <string name="account_manage">账号管理</string>
    <string name="modify_password">修改密码</string>
    <string name="address_manage">地址管理</string>
    <string name="add_address">新增地址</string>
    <string name="edit_address">编辑地址</string>
    <string name="set_default">设为默认</string>
    <string name="consignor_colon">收货人：</string>
    <string name="phone_colon">手机号码：</string>
    <string name="area_colon">所在地区：</string>
    <string name="address_info_colon">详细地址：</string>
    <string name="select_contact">选择联系人</string>
    <string name="select_addr">选择地址</string>
    <string name="select_province">选择省</string>
    <string name="select_city">选择市</string>
    <string name="select_district">选择区</string>
    <string name="select_your_province">请先选择您所在的省份</string>
    <string name="select_your_city">请先选择您所在的城市</string>


    <string name="qr_scan_tips">将二维码/条码放入框内，即可自动扫描</string>
    <string name="msg_camera_open_bug">相机打开出错，请稍后重试</string>
    <string name="preferences_scanning_title">条码类型</string>
    <string name="preferences_decode_1D_industrial_title">一维码：工业</string>
    <string name="preferences_decode_1D_product_title">一维码：商品</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (测试)</string>
    <string name="preferences_decode_QR_title">二维码</string>
    <string name="preferences_actions_title">扫描成功</string>
    <string name="preferences_play_beep_title">播放提示音</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪贴板</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_remember_duplicates_title">保存重复记录</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复的记录</string>
    <string name="preferences_history_title">存入历史记录</string>
    <string name="preferences_history_summary">自动将条码存入历史记录</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_general_title">扫描设置</string>
    <string name="preferences_front_light_title">闪光灯</string>
    <string name="preferences_front_light_summary">设置闪光灯模式</string>
    <string name="preferences_auto_focus_title">自动对焦</string>
    <string name="preferences_invert_scan_title">反色</string>
    <string name="preferences_invert_scan_summary">扫描黑色背景上的白色条码。仅适用于部分设备。</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条码</string>
    <string name="preferences_orientation_title">不自动旋转</string>
    <string name="preferences_result_title">搜索设置</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_search_country">搜索引擎国别</string>
    <string name="preferences_device_bug_workarounds_title">设备适配</string>
    <string name="preferences_disable_continuous_focus_title">不持续对焦</string>
    <string name="preferences_disable_continuous_focus_summary">使用标准对焦模式</string>
    <string name="preferences_disable_exposure_title">不曝光</string>
    <string name="preferences_disable_metering_title">不使用距离测量</string>
    <string name="preferences_disable_barcode_scene_mode_title">不进行条形码场景匹配</string>
    <string name="msg_error">错误</string>
    <string name="msg_invalid_value">值无效</string>
    <string name="msg_bulk_mode_scanned">批量扫描模式：条码已扫描并保存</string>

    <string name="goods_serial">商品编码：</string>
    <string name="selected">已选</string>
    <string name="shipping">送至</string>
    <string name="salenum">销量：</string>
    <string name="store">店铺</string>
    <string name="add_cart">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="filter">筛选</string>
    <string name="loading">加载中</string>
    <string name="setting">设置</string>

    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="close">关闭</string>
    <string name="all_select">全选</string>
    <string name="goto_settle">去结算(%s)</string>
    <string name="choose_goods">(已选：%s)</string>
    <string name="cart_amount">合计：%s</string>
    <string name="free_ship_fee">免运费</string>
    <string name="include_ship_fee">含运费</string>
    <string name="cart_ship_fee_format">运费：%s</string>
    <string name="please_select">请选择</string>

    <string name="confirm_order">确认订单</string>
    <string name="num_item_format">%s件</string>
    <string name="discount">优惠</string>
    <string name="goods_amount_format">+￥%s</string>
    <string name="ship_fee_format">+￥%s</string>
    <string name="discout_format">-￥%s</string>
    <string name="submit_order">提交订单</string>

    <string name="select_delivery_address">选择收货地址</string>
    <string name="edit_delivery_address">编辑收货地址</string>
    <string name="add_delivery_address">新增收货地址</string>
    <string name="save_and_use">保存并使用</string>
    <string-array name="invoice_type">
        <item>明细</item>
        <item>酒</item>
        <item>食品</item>
        <item>饮料</item>
        <item>玩具</item>
        <item>日用品</item>
        <item>装修材料</item>
        <item>化妆品</item>
        <item>办公用品</item>
        <item>学生用品</item>
        <item>饰品</item>
        <item>服装</item>
        <item>箱包</item>
        <item>家电</item>
        <item>劳防用品</item>
        <item>耗材</item>
        <item>电脑配件</item>
    </string-array>
</resources>
