<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
   android:orientation="vertical">
   <FrameLayout 
	    android:id="@+id/fragmentContainer"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"/>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
		<View 
	       android:layout_width="match_parent"
	       android:layout_height="1dp"
	       android:background="@color/grey"/>
		<RadioGroup
		    android:layout_width="match_parent"
		    android:layout_height="48dp"
		    android:weightSum="4"
		    android:background="@color/lightgrey"
		    android:orientation="horizontal">
		   <RadioButton
		     android:id="@+id/homeBtn"
		     style="@style/MainMenuBtn"
		     android:drawableTop="@drawable/home_btn_bg"
		     android:checked="true"
		     android:text="@string/home"/>
		   <RadioButton 
		       android:id="@+id/categoryBtn"
		       style="@style/MainMenuBtn"
		       android:drawableTop="@drawable/category_btn_bg"
		       android:text="@string/category"/>
		   <RadioButton 
		       android:id="@+id/cartBtn"
		       style="@style/MainMenuBtn"
		       android:drawableTop="@drawable/cart_btn_bg"
		       android:text="@string/cart"/>
		   <RadioButton 
		       android:id="@+id/ucenterBtn"
		       style="@style/MainMenuBtn"
		       android:drawableTop="@drawable/ucenter_btn_bg"
		       android:text="@string/ucenter"/>
		 </RadioGroup>
	</LinearLayout>
</LinearLayout>
