<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
	    android:background="@color/white"
	    android:orientation="vertical">
	    <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:background="@color/white">
	        <TextView
	            android:id="@+id/tv_store_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentStart="true" 
	            android:layout_centerVertical="true"
	            android:text="@string/app_name"
	            android:textSize="14sp"
	            android:textColor="@color/text_color"/>
	        <TextView 
	            android:id="@+id/tv_order_state"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentEnd="true"
	            android:text="@string/success"
	            android:textSize="14sp"
	            android:textColor="@color/price_color"/>
	    </RelativeLayout>
		<LinearLayout 
		    android:id="@+id/goodsList"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    
		</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingRight="14dp"
            android:orientation="horizontal"
            android:gravity="center|right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="合计"
                android:textColor="@color/color_999999"
                android:textSize="13dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/money_unit"
                android:textColor="@color/color_333333"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/tv_order_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="center"
                android:text="50"
                android:textColor="@color/color_333333"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/tv_ship_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ship_fee_format"
                android:textSize="13dp"
                android:textColor="@color/color_999999"/>
        </LinearLayout>
	    <LinearLayout
           android:id="@+id/ll_operate_layout"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:padding="10dp"
           android:gravity="right|center"
           android:background="@color/white"
           android:orientation="horizontal">
	       <TextView
	           android:id="@+id/tv_delete_order"
               android:layout_width="75dp"
               android:layout_height="30dp"
               android:gravity="center"
               android:visibility="gone"
	           android:background="@drawable/btn_grey_bg"
	           android:text="@string/delete_order"
	           android:textSize="14sp"
	           android:textColor="@color/text_color"/>
           <TextView
               android:id="@+id/tv_cancel_order"
               android:layout_width="75dp"
               android:layout_height="30dp"
               android:layout_marginLeft="8dp"
               android:layout_gravity="right|center"
               android:visibility="gone"
               android:gravity="center"
               android:background="@drawable/btn_grey_bg"
               android:text="@string/cancel_order"
               android:textSize="14sp"
               android:textColor="@color/text_color"/>
	       <TextView
	           android:id="@+id/tv_order_pay"
	           android:layout_width="75dp"
	           android:layout_height="30dp"
               android:layout_marginLeft="8dp"
               android:gravity="center"
               android:layout_gravity="right|center"
	           android:background="@drawable/btn_pay_bg"
               android:visibility="gone"
	           android:text="@string/order_pay"
	           android:textSize="14sp"
	           android:textColor="@color/white"/>
           <TextView
               android:id="@+id/tv_order_eval"
               android:layout_width="75dp"
               android:layout_height="30dp"
               android:layout_marginLeft="8dp"
               android:visibility="gone"
               android:gravity="center"
               android:layout_gravity="right|center"
               android:background="@drawable/btn_orange_bg"
               android:text="@string/go_evaluate"
               android:textSize="14sp"
               android:textColor="@color/orange"/>
           <TextView
               android:id="@+id/tv_order_receipt"
               android:layout_width="75dp"
               android:layout_height="30dp"
               android:layout_marginLeft="8dp"
               android:visibility="gone"
               android:gravity="center"
               android:layout_gravity="right|center"
               android:background="@drawable/btn_orange_bg"
               android:text="@string/confirm_receipt"
               android:textSize="14sp"
               android:textColor="@color/orange"/>
	   </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_d9d9d9"
            android:layout_marginLeft="14dp"/>
    </LinearLayout>
</LinearLayout>
