<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey">
    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <Button
            android:id="@+id/cancel_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:minHeight="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textSize="12sp"
            android:textColor="@color/darkgrey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal|center_vertical"
            android:background="@color/lightgrey"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="12sp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/head"
        android:background="@color/grey"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/head"
	    android:layout_marginTop="15dp"
	    android:orientation="vertical">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/white"
	        android:padding="15dp"
	        android:orientation="horizontal">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dp"
	        	android:layout_marginEnd="10dp"
	            android:text="@string/account"
	            android:textSize="13sp"
	            android:textColor="@color/darkgrey"/>
	        <EditText 
	            android:id="@+id/account_edit"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:singleLine="true"
	            android:imeOptions="actionNext"
	            android:background="@color/white"
	            android:hint="@string/account_edit_placeholder"
	            android:inputType="text"
	            android:textColorHint="@color/grey"
	            android:textColor="@color/black"
	            android:textSize="13sp"/>
	    </LinearLayout>
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@color/grey"/>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	         android:background="@color/white"
	         android:padding="15dp"
	        android:orientation="horizontal">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginEnd="10dp"
	            android:layout_marginRight="10dp"
	            android:text="@string/password"
	            android:textSize="13sp"
	            android:textColor="@color/darkgrey"/>
	        <EditText 
	            android:id="@+id/password_edit"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="textPassword"
	            android:imeOptions="actionDone"
	            android:singleLine="true"
	            android:background="@color/white"
	            android:textColorHint="@color/grey"
	            android:hint="@string/password_edit_placeholder"
	            android:textColor="@color/black"
	            android:textSize="13sp"/>
	    </LinearLayout>
	    <Button
	        android:id="@+id/submit_btn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/BtnDisable"
	       	android:paddingTop="10dp"
	       	android:paddingBottom="10dp"
	       	android:layout_marginTop="15dp"
	       	android:layout_marginLeft="20dp"
	       	android:layout_marginRight="20dp"
	       	android:layout_marginStart="20dp"
	       	android:layout_marginEnd="20dp"
	        android:text="@string/login"
	        android:textSize="13sp"/>
	    <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="20dp"
	        android:background="@color/lightgrey">
	        <Button 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentStart="true"
	            android:gravity="left|start"
	            android:background="@null"
	            android:text="@string/free_reg"
	            android:textColor="@color/darkgrey"
	            android:textSize="12sp"/>
	        <Button 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentEnd="true"
	            android:gravity="end|right"
	            android:background="@null"
	            android:text="@string/forget_password"
	            android:textColor="@color/darkgrey"
	            android:textSize="12sp"/>
	    </RelativeLayout>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="49dp"
	    android:layout_alignParentBottom="true"
	    android:orientation="vertical">
		<View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="@color/grey"/>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:background="@color/white"
		    android:padding="10dp"
		    android:weightSum="2"
		    android:layout_gravity="center_horizontal"
		    android:orientation="horizontal">
		    <LinearLayout
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
				android:layout_weight="1"
			    android:gravity="center"
			    android:background="@color/white"
				android:orientation="horizontal">
				<ImageView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:gravity="center_vertical"
				    android:layout_marginEnd="5dp"
				    android:layout_marginRight="5dp"
				    android:src="@drawable/icon_weixin" />
		    	<Button 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:gravity="center_vertical"
			        android:background="@null"
			        android:text="@string/wx_login"
			        android:textColor="@color/darkgrey"
			        android:textSize="12sp"/>
		    </LinearLayout>
  			<LinearLayout
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_vertical|center_horizontal"
				android:background="@color/white"
				android:orientation="horizontal">
		    	<ImageView
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:gravity="center_vertical"
		    	    android:layout_marginEnd="5dp"
		    	    android:layout_marginRight="5dp"
		    	    android:src="@drawable/icon_qq"/>
			  <Button 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:gravity="center_vertical"
			        android:background="@null"
			        android:button="@null"
			        android:text="@string/qq_login"
			        android:textColor="@color/darkgrey"
			        android:textSize="12sp"/>
		     </LinearLayout>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
