<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        <LinearLayout
	    android:id="@+id/homeHead"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/lightgrey"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/scanBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="0dp"
            android:layout_margin="5dp"
            android:background="@null"
            android:drawableTop="@drawable/icon_scan"
            android:drawablePadding="2dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/searchBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:layout_weight="1"
            android:background="@color/lightgrey"
            android:drawableLeft="@drawable/icon_search"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/icon_search"
            android:gravity="center_vertical|start"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/search_goods"
            android:textColor="@color/darkgrey"
            android:textSize="12sp" />

        <Button
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="0dp"
            android:layout_margin="5dp"
            android:background="@null"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/icon_message"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
